// Copyright 2013-2016 Jason Leyba
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dossier.state;

option java_package = "com.github.jsdossier.proto";
option java_multiple_files = true;

// Encapsulates a snapshot of the current page state between view changes.
message PageSnapshot {
  // The snapshot ID.
  string id = 1;

  // The URI for the JSON data file used to generate the page.
  string data_uri = 2;

  // The page title.
  string title = 3;

  // The page's scrolling offset.
  int32 scroll = 4;

  // The IDs of open cards on the page.
  repeated string open_card = 5;
}
